--- a/app/src/main/res/layout/activity_race_select.xml
+++ b/app/src/main/res/layout/activity_race_select.xml
@@ -5,6 +5,10 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context="in.avimarine.racecommittee.MainActivity">
+  tools:context="in.avimarine.racecommittee.activities.RaceSelectActivity">
 
+  <ListView
+    android:id="@+id/listview"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"></ListView>
 </android.support.constraint.ConstraintLayout>
