--- a/app/src/main/res/layout/fragment_race_input.xml
+++ b/app/src/main/res/layout/fragment_race_input.xml
@@ -4,7 +4,7 @@
   android:id="@+id/constraintLayout"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context="in.avimarine.racecommittee.RaceInputActivity$RaceInputFragment">
+  tools:context="in.avimarine.racecommittee.activities.RaceInputActivity$RaceInputFragment">
 
   <ScrollView
     android:layout_width="match_parent"
