--- a/app/src/main/res/menu/menu_race_input.xml
+++ b/app/src/main/res/menu/menu_race_input.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
-  tools:context="in.avimarine.racecommittee.RaceInputActivity">
+  tools:context="in.avimarine.racecommittee.activities.RaceInputActivity">
   <item
     android:id="@+id/action_sortby_sail"
     android:orderInCategory="100"
