--- a/app/src/main/res/layout/activity_race_input2.xml
+++ b/app/src/main/res/layout/activity_race_input2.xml
@@ -7,13 +7,13 @@
   android:layout_height="match_parent"
   tools:context="in.avimarine.racecommittee.activities.RaceInput2Activity">
 
-  <GridView
-    android:id="@+id/grid"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:columnWidth="90dp"
-    android:numColumns="auto_fit"
-    android:verticalSpacing="5dp"
-    android:horizontalSpacing="5dp"/>
+  <!--<GridView-->
+    <!--android:id="@+id/grid"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:columnWidth="90dp"-->
+    <!--android:numColumns="auto_fit"-->
+    <!--android:verticalSpacing="5dp"-->
+    <!--android:horizontalSpacing="5dp"/>-->
 
 </android.support.constraint.ConstraintLayout>
