--- a/app/src/main/res/layout/fragment_race_input.xml
+++ b/app/src/main/res/layout/fragment_race_input.xml
@@ -4,17 +4,9 @@
   android:id="@+id/constraintLayout"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context="in.avimarine.racecommittee.activities.RaceInputActivity$RaceInputFragment">
+  tools:context="in.avimarine.racecommittee.fragments.RaceInputFragment">
 
-  <ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginEnd="4dp"
-    android:paddingBottom="70dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
+
     <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -44,15 +36,14 @@
           android:layout_height="wrap_content"
           android:layout_weight="1"/>
       </RadioGroup>
-      <TableLayout
-        android:id="@+id/boatsButtonTable"
+      <GridView
+        android:id="@+id/boats_grid"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginEnd="4dp">
-        <!--Content added at runtime-->
-      </TableLayout>
+        android:layout_height="match_parent"
+        android:columnWidth="90dp"
+        android:numColumns="auto_fit"
+        android:verticalSpacing="5dp"
+        android:horizontalSpacing="5dp"/>
     </LinearLayout>
-  </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
