--- a/app/src/main/res/layout/activity_race_input.xml
+++ b/app/src/main/res/layout/activity_race_input.xml
@@ -6,7 +6,7 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:fitsSystemWindows="true"
-  tools:context="in.avimarine.racecommittee.activities.RaceInputActivity">
+  tools:context="in.avimarine.rcrecorder.activities.RaceInputActivity">
 
   <android.support.design.widget.AppBarLayout
     android:id="@+id/appbar"
