--- a/app/src/main/res/layout/activity_race_select.xml
+++ b/app/src/main/res/layout/activity_race_select.xml
@@ -6,9 +6,17 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context="in.avimarine.rcrecorder.activities.RaceSelectActivity">
-
+  <android.support.v7.widget.Toolbar
+    android:id="@+id/toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="?attr/actionBarSize"
+    android:layout_weight="1"
+    android:background="?attr/colorPrimary"
+    app:layout_scrollFlags="scroll|enterAlways"
+    app:popupTheme="@style/AppTheme.PopupOverlay"/>
   <ListView
     android:id="@+id/listview"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="0dp"
+    app:layout_constraintTop_toBottomOf="@id/toolbar"/>
 </android.support.constraint.ConstraintLayout>
