--- a/app/src/main/res/layout/race_list_item.xml
+++ b/app/src/main/res/layout/race_list_item.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<in.avimarine.rcrecorder.listadapters.CheckableRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="?android:attr/listPreferredItemHeight"
   android:padding="6dip" >
@@ -29,11 +29,29 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_above="@id/secondLine"
-
     android:layout_alignParentTop="true"
     android:layout_alignWithParentIfMissing="true"
     android:layout_toEndOf="@id/icon"
     android:gravity="center_vertical"
     android:textSize="16sp" />
+  <TextView
+    android:id="@+id/class_tv"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/firstLine"
+    android:layout_alignParentBottom="true"
+    android:layout_alignWithParentIfMissing="true"
+    android:layout_toStartOf="@+id/checkbox"
+    android:textSize="16sp"
+    android:text="test"/>
+  <CheckBox
+    android:id="@+id/checkbox"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:clickable="false"
+    android:focusable="false"
+    android:layout_alignParentEnd="true"
+    android:layout_gravity="center_vertical"
+    android:layout_centerInParent="true"/>
 
-</RelativeLayout>
+</in.avimarine.rcrecorder.listadapters.CheckableRelativeLayout>
